# 가맹점 디테일 변경

--- a/src/components/assets/MobileHeader.module.scss
+++ b/src/components/assets/MobileHeader.module.scss
@@ -11,6 +11,10 @@
     // border-bottom: solid 1px $color-dbdbdb;
     @include mobile {
         display: block;
+        transition: top .15s ease-in-out;
+        &.close {
+            top: -40px;
+        }
     }
     .area {
         height: 100%;
