--- a/src/container/main/CalculateContainer.module.scss
+++ b/src/container/main/CalculateContainer.module.scss
@@ -12,6 +12,10 @@
             width: 40px; height: 40px;
             z-index: 2500;
             padding: 0;
+            transition: top .15s ease-in-out;
+            &.close {
+                top: -40px;
+            }
         }
     }
     .tab {
