--- a/src/container/main/order/OrderDetailContainer.module.scss
+++ b/src/container/main/order/OrderDetailContainer.module.scss
@@ -169,6 +169,10 @@
                         padding: 5px 10px;
                         margin-left: 10px;
                         font-size: $desktop16px;
+                        &.complete {
+                            border-color: #A61332;
+                            color: #A61332;
+                        }
                         @include mobile {
                             display: none;
                         }
@@ -305,6 +309,10 @@
                     margin-top: 10px;
                     background-color: $desktop-main-color;
                     border-color: $desktop-main-color;
+                    &.red {
+                        background-color: #A61332;
+                        border-color: #A61332;
+                    }
                     @include tablet {
                         margin-top: 0;
                         margin-left: 10px;
