--- a/src/components/modal/Sticker.module.scss
+++ b/src/components/modal/Sticker.module.scss
@@ -1,9 +1,13 @@
+@import '../../static/stylesheets/Root.scss';
+
 .preview {
-    width: 250px;
-    height: 260px;
+    width: 500px; height: 500px;
     background-color: rgba(0, 0, 0, 0.05);
     border-radius: 2px;
     border: solid 1px #ebebeb;
+    @include mobile {
+        width: 100%; height: 100%;
+    }
     .input-preview {
         width: 100%;
         height: 100%;
@@ -57,6 +61,7 @@
         .preview_out {
             width: 160px;
             height: 160px;
+            transform: scale(2) translate(-25%, -25%);
             .preview_in {
                 padding: 15px;
                 width: 152px;
